--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projektityö</title>
     <script src="https://kit.fontawesome.com/6eb243e274.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../projektityö/projektistyles.css">
+    <link rel="stylesheet" href="projektistyles.css">
 </head>
 
 <body>
