--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
 
 <div class="image-grid">
-    <img class="image-grid-col-2" src="../projektityö/3291-pepe-fisherman.png" alt="pepe-fisherman.png"> 
-    <img class="image-grid-col-2"src="../projektityö/lataus.jpg" alt="lataus.jpg"> 
-    <img class="image-grid-row-2" src="../projektityö/33c54ccdf4de36a44a18bcab886d2b17.jpg" alt="33c54ccdf4de36a44a18bcab886d2b17.jpg">
-    <img class="image-grid-col-2" src="../projektityö/sticker_23.webp" alt="sticker_23.webp">
-    <img class="image-grid-col-2" src="../projektityö/pepe-transparent.gif" alt="pepe-transparent.gif">
+    <img class="image-grid-col-2" src="3291-pepe-fisherman.png" alt="pepe-fisherman.png"> 
+    <img class="image-grid-col-2"src="lataus.jpg" alt="lataus.jpg"> 
+    <img class="image-grid-row-2" src="33c54ccdf4de36a44a18bcab886d2b17.jpg" alt="33c54ccdf4de36a44a18bcab886d2b17.jpg">
+    <img class="image-grid-col-2" src="sticker_23.webp" alt="sticker_23.webp">
+    <img class="image-grid-col-2" src="pepe-transparent.gif" alt="pepe-transparent.gif">
    
 </div>
 
@@ -65,7 +65,7 @@
         
         <div class="footer-col">
             <h4>NoSkillCoders</h4>
-        <img src="../projektityö/logo.jpg" alt="logo.jpg" height="200" width="200">
+        <img src="logo.jpg" alt="logo.jpg" height="200" width="200">
     </div>
     </footer>
 </div>
