--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="../projektityö/logo.jpg" alt="logo.jpg">
+        <img src="logo.jpg" alt="logo.jpg">
         <ul class="navigation">
         <li><a href="#">Kirjaudu sisään</a></li>
         <li><a href="#">Valitse kieli</a></li>
